# py4web

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CONTRIBUTORS.md  CONTRIBUTORS.rst  LICENSE  LICENSE.md  MIGRATION.md  Makefile  README.md  README.rst  TODO  __init__.py  default.nix  fb87181b96a99be45f5a23f4277867ce_thing.table  form.py  hermetically  py4web-start  py4web.py  pyproject.toml  requirements.txt  runp4w.sh  setup.py  shell.nix  start.py  storage.db  test-requirements.txt  web3py-start  web3py.py
.github/: copilot-instructions.md
.github/workflows/: run_test.yaml
applications/_dashboard/: __init__.py
applications/_scaffold/: __init__.py  common.py  controllers.py  models.py  settings.py
applications/dashboard/: __init__.py
applications/examples/: __init__.py
applications/myapp/: controllers.py  models.py
applications/todo/: __init__.py
applications/welcome/: __init__.py  storage.db
apps/_dashboard/: .gitignore  DASHBOARD_GUIDE.md  THEMES_GUIDE.md  __init__.py  common.py  controllers.py  diff2kryten.py  models.py  settings.py  utils.py
apps/_default/: __init__.py
apps/_documentation/: __init__.py
apps/_minimal/: __init__.py
apps/_scaffold/: .web2py_gitignore  AGENTS.md  __init__.py  celerybeat-schedule.db  common.py  controllers.py  models.py  settings.py  tasks.py
apps/_socketio/: __init__.py
apps/_websocket/: __init__.py
apps/_ws/: __init__.py
apps/_wstornado/: __init__.py
apps/angflat/: controllers.py  models.py
apps/bulma/: controllers.py  controllers.py.orig  models.py  models.py.orig
apps/bulma-ad/: controllers.py  models.py
apps/bulmaadmin/: controllers.py  models.py
apps/chen/: controllers.py  models.py
apps/client/: __init__.py
apps/concept/: controllers.py  models.py
apps/corona/: controllers.py  models.py
apps/desk/: common.py  controllers.py  models.py
apps/examples/: README.md  __init__.py  common.py  controllers.py  controllers_components.py  models.py  settings.py
apps/fadebook/: README.md  __init__.py  common.py  controllers.py  make_up_data.py  models.py  settings.py
apps/gentelella/: controllers.py  models.py
apps/kapella/: atab_utils.py  controllers.py  images_utils.py  models.py
apps/kit/: atab_utils.py  controllers.py  models.py  tlist_utils.py
apps/lte3/: atab_utils.py  controllers.py  models.py  upload_utils.py
apps/myapp/: controllers.py  models.py
apps/myfeed/: common.py  controllers.py  make_up_data.py  models.py  settings.py
apps/ngx/: controllers.py  models.py
apps/notika/: controllers.py  models.py
apps/octopus/: controllers.py  models.py
apps/reusable/: __init__.py
apps/sb/: controllers.py  (+1 more)
docker/: Dockerfile  Makefile  docker-compose.yml
docs/: README.md  chapter-01.rst  chapter-02.rst  chapter-03.rst  chapter-04.rst  chapter-05.rst  chapter-06.rst  chapter-07.rst  chapter-08.rst  chapter-09.rst  chapter-10.rst  chapter-11.rst  chapter-12.rst  chapter-13.rst  chapter-14.rst  chapter-15.rst  chapter-16.rst  conf.py  index.rst  requirements.txt  spelling_wordlist_en.txt  updateDocs.sh
gluon/: __init__.py  admin.py  anyserver.py  auth.py  beautify.py  compatibility.py  current.py  dal.py  environ_parsers.py  fileutils.py  form.py  helpers.py  http.py  languages.py  mail.py  main.py  memoize_property.py  menu,py  request.py  response.py  restricted_error.py  rocket.py  serializers.py  session.py  settings.py  streamer.py  tag.py  template.py  tools.py  url.py  utils.py  validators.py  wiki.py
py4web/: __init__.py  __main__.py  anyservers.py  app_methods.py  cli.py  core.py  gunicorn.rst  server_adapters.py  server_adapters.py.new  watcher.py
scripts/: setup_google_oauth.sh
tests/: test_action.py  test_auth.py  test_cache.py  test_core_coverage.py  test_fixture.py  test_form.py  test_get_error_snapshot.py  test_json.py  test_main.py  test_session.py  test_tags.py  test_template.py  test_url.py
trunk/: bottle_app.py
tutorial-video/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
web3py/: __init__.py  core.py  form.py
work/: test.py
(+2491 files in other folders)
