[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]
package-mode = false  

[tool.poetry.dependencies]
python = "^3.11"
py4web = "^1.20250330.1"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py4web"
version = "1.20250330.1"
authors = [{ name="Massimo Di Pierro", email="massimo.dipierro@gmail.com" },]
description = "A fast, stable, comprehensive web framework"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
      "Programming Language :: Python :: 3",
      "License :: OSI Approved :: BSD License",
      "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
  
[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools]
packages = ["py4web", "py4web.server_adapters", "py4web.utils", "py4web.utils.auth_plugins"]

[tool.setuptools.package-data]
py4web = ["assets/*"]

[project.scripts]
py4web = "py4web.core:cli"

[project.urls]
"Homepage" = "https://github.com/web2py/py4web"
"Bug Tracker" = "https://github.com/web2py/py4web/issues"
"Documentation" = "https://py4web.com"
