[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py4web"
authors = [{ name="Massimo Di Pierro", email="massimo.dipierro@gmail.com" },]
description = "A fast, stable, comprehensive web framework"
readme = "README.rst"
requires-python = ">=3.9"
license = { file="LICENSE.md" }
dynamic = ["version"]
dependencies = [
    "wheel",
    "ombott>=2.4",
    "click",
    "colorama",
    "cryptography",
    "portalocker",
    "tornado",
    "renoir >= 1.4.0",
    "requests",
    "threadsafevariable >= 20250716.1",
    "pyjwt >= 2.0.1",
    "pycryptodome",
    "pluralize >= 20250901.2",
    "rocket3 >= 20241225.1",
    "yatl >= 20230507.3",
    "pydal >= 20250922.1",
    "watchgod >= 0.6",
]

[tool.setuptools.dynamic]
version = {attr = "py4web.__init__.__version__"}

[tool.setuptools]
packages = ["py4web", "py4web.server_adapters", "py4web.utils", "py4web.utils.auth_plugins"]

[tool.setuptools.package-data]
py4web = ["assets/*"]

[project.scripts]
py4web = "py4web.core:cli"

[project.urls]
"Homepage" = "https://github.com/web2py/py4web"
"Bug Tracker" = "https://github.com/web2py/py4web/issues"
"Documentation" = "https://py4web.com"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mechanize==0.4.6",
    "python-memcached",
]
docs = [
    "docutils",
    "pystemmer>=2.2",
    "sphinx",
    "sphinx-tabs",
    "sphinx_rtd_theme",
    "rinohtype==0.5.4",
    "sphinxcontrib-spelling",
]
manage = [
    "twine",
]    

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]
package-mode = false  

[tool.poetry.dependencies]
python = "^3.11"
py4web = "^1.20250330.1"

[tool.ruff.lint]
select = []
ignore = ["E711", "E712"]
